# TruthLens

./: .gitignore  AGENTS.md  DEVLOG.md  README.md  pubspec.yaml
android/: gradle.properties
assets/: model_catalog.json
docs/: implementation_plan.md  ios_llama_setup.md  llm_model_hosting.md  llm_platform.md  llm_platform_setup.md  model_integration_testing.md  native_inference_bridge.md  plan_status.md  release_checklist.md  remote_llm_setup.md
integration_test/: full_analysis_test.dart  onnx_detector_test.dart  perf_benchmark_test.dart
ios/: Podfile  TruthLensLlamaBridge.podspec
lib/: main.dart
native/llama_bridge/: .gitignore  CMakeLists.txt  build_android.sh  build_macos.sh  build_windows.ps1  truthlens_llama.cpp  truthlens_llama.h
test/: all_locales_smoke_test.dart  bibliography_verifier_test.dart  bpe_tokenizer_test.dart  detection_test.dart  link_verifier_test.dart  llm_manager_test.dart  model_catalog_asset_test.dart  model_catalog_test.dart  model_import_test.dart  model_manager_test.dart  multilingual_test.dart  network_status_test.dart  ocr_service_test.dart  perf_benchmark_test.dart  provision_plan_test.dart  report_composer_test.dart  report_exporter_test.dart  report_llm_service_test.dart  summary_card_test.dart  transformer_engine_test.dart  wordpiece_tokenizer_test.dart
training/: .gitignore  README.md  compare_baseline_vs_adversarial.py  config.py  download_gemma_authenticated.py  export_gpt2.py  export_onnx.py  fix_onnx_opset.py  prepare_adversarial.py  prepare_data.py  run_adv_pipeline.sh  train_classifier.py  verify_adversarial.py  verify_onnx.py  verify_perplexity.py  watchdog.sh  watchdog2.sh
training_tools/: export_only.py  train_and_export.py
web/: db_bridge.js  flutter_bootstrap.js  fs_bridge.js  index.html  ort_bridge.js
windows/: CMakeLists.txt
(+109 files in other folders)
